--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+pyvenv.cfg
+bin/
+share/
+etc/jupyter/nbconfig/notebook.d/
 MANIFEST
 
 # PyInstaller
